# prgen

./: .gitignore  .goreleaser.yml  CLAUDE.md  README.md  Taskfile.yml  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/: root.go
docs/: development.md
internal/: claude.go  config.go  construct.go  diff_filter.go  git.go  github.go  openai.go  provider.go  ui.go
internal/templates/: body_example.md  body_instructions.md  body_template.md  config.json  title_example.md  title_instructions.md  title_template.md
scripts/: ci-local.sh
src/prgen/: diff.py  llm_client.py  llm_providers.py  main.py
src/prgen/llm_providers/: __init__.py  anthropic_client.py  base.py  factory.py  google_client.py  openai_client.py
src/prgen/prompts/: pr_description.py
tests/: test_integration.py
