[project]
name = "prgen"
version = "0.0.3"
authors = [{ name="lugen4ro", email="lugen4ro@gmail.com" }]
description = "CLI tool to autogenerate GitHub PRs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.3.0",
    "instructor>=1.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
source = "https://github.com/lugen4ro/prgen"
issues = "https://github.com/lugen4ro/prgen/issues"

[project.scripts]
prgen = "prgen.main:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pyright>=1.1.350",
    "hatch>=1.9.0",
    "pytest>=7.0.0"
]

[tool.hatch.envs.default]
dependencies = [
    "ruff>=0.3.0",
    "pyright>=1.1.350",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check ."
lint-fix = "ruff check --fix ."
format = "ruff format ."
typecheck = "pyright"
test = "pytest"
checks = ["typecheck", "lint"]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = true
reportMissingTypeStubs = false

# Pydantic specific settings
reportInvalidStringEscapeSequence = "none"
pythonVersion = "3.10"

[tool.ruff]
line-length = 120  # Matches black's default line length
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
